JPA-Converter hinzugefügt

--- a/src/main/webapp/templates/flowView.xhtml
+++ b/src/main/webapp/templates/flowView.xhtml
@@ -3,7 +3,7 @@
 
 <h:body>
   <ui:composition template="/templates/standard.xhtml">
-    <ui:param name="title" value="Flow demo" />
+    <ui:param name="title" value="JSF 2.2: Faces Flows" />
     <ui:define name="content">
 
       <h:panelGrid columns="2">
