--- a/src/main/webapp/contracts/jugbb/templates/standard.xhtml
+++ b/src/main/webapp/contracts/jugbb/templates/standard.xhtml
@@ -10,7 +10,7 @@
   <h:panelGroup layout="block" id="header" style="display: block; width: 100%; background-color: white; color: #D31117;">
     <ui:insert name="header">
       <h:panelGrid columns="2">
-        <h:graphicImage name="logo.png" />
+        <h:graphicImage library="images" name="logo.png" />
         <h:panelGrid columns="1">
           <h:outputText value="What's new in Java EE 7?" style="vertical-align: middle; color: #D31117; font-size: xx-large" />
           <h:outputText value="#{title}" style="vertical-align: middle; color: #D31117; font-size: large" />
