--- a/src/main/webapp/templates/flowView.xhtml
+++ b/src/main/webapp/templates/flowView.xhtml
@@ -17,7 +17,7 @@
         <h:outputText value="#{facesContext.viewRoot.viewId}" />
 
         <h:outputText value="Active beans:" />
-        <h:outputText value="#{activeFlowsModel.activeBeans}" />
+        <h:outputText value="#{activeFlowsPresenter.activeBeans}" />
       </h:panelGrid>
 
       <h:panelGroup>
